# flagship-python-sdk

./: .coverage  .coveragerc  .gitignore  README.md  bucketing.json  build-flagship-dependency.sh  docker-compose.yml  handler.py  pyproject.toml  qa_app.py  requirements-dev.txt  requirements.txt  script.py  setup.cfg  setup.py  template.yaml
.github/workflows/: ci.yml  python-package.yml  python-release.yml  python-test.yml
cache/: bkk4s7gcmjcg07fke9dg-cache.db  visitor_1234.cache
examples/django/: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yml  manage.py  requirements.txt
examples/django/abtasty_demo/: asgi.py  settings.py  urls.py  wsgi.py
examples/django/flagship_ecommerce_demo/: apps.py  middlewares.py  urls.py  views.py
examples/django/flagship_ecommerce_demo/templates/: about.html  base.html  cart.html  checkout.html  contact.html  index.html  product.html  shop.html  thankyou.html
examples/django/flagship_ecommerce_demo/templatetags/: fs_value.py
examples/django/flagship_qa/: admin.py  apps.py  models.py  urls.py  views.py
examples/django/flagship_qa/migrations/: 0001_initial.py
examples/django/flagship_qa/static/qa/js/: script.js
examples/django/flagship_qa/templates/flagship_qa/: base.html  events.html  index.html
flagship/: __init__.py  api_manager.py  app.py  bucketing_manager.py  cache_helper.py  cache_manager.py  campaign.py  config.py  config_manager.py  constants.py  decision_manager.py  decision_mode.py  decorators.py  errors.py  flag.py  flag_metadata.py  flagship_context.py  handler.py  hits.py  http_helper.py  log_manager.py  modification.py  murmur32x86.py  status.py  status_listener.py  targeting.py  targeting_comparator.py  tracking_manager.py  utils.py  variation.py  variation_group.py  visitor.py  visitor_strategies.py
flagship.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
flagship/.old/: app.py  config.py  decorators.py  errors.py  visitor.py
flagship/.old/helpers/: api.py  bucketing.py  hits.py  murmur32x86.py
flagship/.old/model/: campaign.py  modification.py  targeting.py  variation.py  variation_group.py
flagship/cache/: cache_visitor.py
flagship/helpers/: api.py  bucketing.py  hits.py  murmur32x86.py  preset_context.py
flagship/main/: api_manager.py  bucketing_manager.py  config.py  config_manager.py  decision_manager.py  decision_mode.py  status.py  status_listener.py
flagship/model/: campaign.py  modification.py  targeting.py  targeting_comparator.py  variation.py  variation_group.py
flagship/old/: app.py  config.py  decorators.py  utils.py  visitor.py
flagship/old/cache/: cache_visitor.py
flagship/old/helpers/: api.py  bucketing.py  hits.py
flagship/old/model/: campaign.py  modification.py  targeting.py  variation.py  variation_group.py
flagship/utils/: __init__.py  constants.py  decorators.py  log_manager.py
lambda/: lambda.py
tests/: __init__.py  bucketing.json  test_bucketing.py  test_cache_manager.py  test_config.py  test_constants_res.py  test_decorator.py  test_flags.py  test_hits.py  test_init.py  test_initialization.py  test_log_manager.py  test_singleton.py  test_status_listener.py  test_tracking_and_cache_manager.py  test_visitor.py
tests-public/: script.py
tests/cache/: visitor_1234.cache
tests/old/: panic.json  test_bucketing.py  test_decorator.py  test_singleton.py  test_visitor.py
venv2.7/local/: bin  lib
venv3.5/: pyvenv.cfg
