[build-system]
requires = ["setuptools>=44.1.0"]
build-backend = "setuptools.build_meta"
#
#[project]
#name = "flagship"
#version = "2.1.4"
#authors = [
#  { name="Flagship Team", email="support@flagship.io" },
#]
#description = "Flagship Python SDKe"
#readme = "README.md"
#license = { file="LICENSE" }
#requires-python = ">=2.7"
#classifiers = [
#    "Programming Language :: Python :: 3",
#    "Operating System :: OS Independent",
#]
#packages = ["flagship"]
#dependencies = [
#    "requests==2.27.1",
#    "pytest==4.6.11",
#    "typing==3.7.4.3",
#    "six==1.16.0",
#    "enum34~=1.1.10",
#    "responses==0.17.0",
#]
#
#[project.urls]
#"Documentation" = "https://docs.developers.flagship.io/docs/python-v2-1"
#"Sources" = "https://github.com/abtasty/flagship-python-sdk"