[tool.poetry]
name = "flagship"
version = "3.0.0"
description = "Flagship Python SDK"
authors = ["Raphael <raphael@abtasty.com>"]
license = "Apache License Version 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7"
requests = ">=2.31.0"
pytest = ">=7.4.3"
responses = "=0.23.0"
mock = ">=5.1.0"
importlib-metadata = ">=6.0.0"
urllib3 = "=1.26.18"
zipp = ">=3.12.0"
tomli-w = "^1.0.0"

[tool.poetry.urls]
Sources = "https://github.com/abtasty/flagship-python-sdk"
Documentation = "https://docs.developers.flagship.io/docs/python"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["flagship", "tests"]
